Added host machine preparation scripts

--- a/clean_folders.ipynb
+++ b/clean_folders.ipynb
@@ -12,6 +12,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e1b2d54e-f63f-40cb-8189-6f16cf4c5b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.getipython import get_ipython\n",
+    "kernel = get_ipython().kernel\n",
+    "cf=kernel.config['IPKernelApp']['connection_file']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a1c91a1-652c-45e6-9c63-94ce4e7d58dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'IPKernelApp': {'connection_file': '/home/linuxu/.local/share/jupyter/runtime/kernel-3a9e75b5-4820-44ea-83e4-be107a752125.json'}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a5328a27-fc89-46e0-b4d2-2c922ec25370",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/linuxu/anaconda3/bin/python'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.executable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9f129526-f70a-492a-9f01-59cd5bbf169e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-09T18:15:59.871664Z",
+     "iopub.status.busy": "2025-02-09T18:15:59.870879Z",
+     "iopub.status.idle": "2025-02-09T18:16:00.267470Z",
+     "shell.execute_reply": "2025-02-09T18:16:00.266387Z",
+     "shell.execute_reply.started": "2025-02-09T18:15:59.871637Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SparkSession\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyspark'"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 157,
    "id": "3a25a447",
    "metadata": {},
@@ -902,7 +987,6 @@
     "import numpy as np \n",
     "\n",
     "def BBW(text, maxlen = 60):\n",
-    "\n",
     "  ss = re.split(r'[ \\n]+', text)  \n",
     "  lens = np.array([len(s)+1 for s in ss]) # lenghts of each word\n",
     "\n",
@@ -3449,9 +3533,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TTS",
+   "display_name": "Python [conda env:base]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3463,7 +3547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
