changed experiment report schema

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -38,18 +38,27 @@
     "#import findspark\n",
     "import os\n",
     "import sys\n",
-    "\n",
     "#from pyspark.sql import SparkSession"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983b6a28-8510-4261-980a-64bd0c0a2f03",
+   "id": "1841c6ee-363b-4c69-bdc9-19e47bab5ff0",
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.executable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84f01cc-1026-446a-b40a-24900216b129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -95,23 +104,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33be8ff2-9d70-4b65-9052-83f96724f321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pylatexenc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c7b60c2a-8c99-418f-b8e2-4969640da1bd",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -198,6 +194,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ff99115-2830-4215-9d5d-6df6331b8750",
+   "metadata": {},
+   "source": [
+    "Experiment report v.2 \n",
+    "schema of the json file   \n",
+    "```\n",
+    "\n",
+    "    #variables: \n",
+    "device(CPU/GPU) \n",
+    "tts_model (tacotron, fastspeech,...)\n",
+    "vocoder_model (hifigan, ...)\n",
+    "batch_size (1,2,3, 5, 10, 20, 30, 50, 70, 100, 200)\n",
+    "chunk_length (50 : 50 : 500)\n",
+    "\n",
+    "    #parameters: \n",
+    "time \n",
+    "experiment_id\n",
+    "stage: (tts/vocoder)\n",
+    "chunk_durations \n",
+    "avg_percent_silence\n",
+    "max_memory_use \n",
+    "run_time \n",
+    "memory_log []\n",
+    "exceptions \n",
+    "n_threads?\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "481240b2-9584-40b1-924e-9f4f7b0a665b",
    "metadata": {},
    "source": [
@@ -247,8 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = bench.run_experiment(processed, case)\n",
-    "with open(\"benchmark/\" + experiment[\"experiment_id\"] + \".json\", \"w+\") as f:\n",
+    "experiment_run = bench.run_experiment(processed, case)\n",
+    "with open(\"benchmark/\" + experiment[0][\"experiment_id\"] + \".json\", \"w+\") as f:\n",
     "    json.dump(experiment,f)\n"
    ]
   },
@@ -259,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment"
+    "experiment_run"
    ]
   },
   {
@@ -278,25 +305,32 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "\n",
-    "paths = Path(\"benchmark\").glob(\"*.json\")\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7484c721-78ea-4d59-a740-2d3ece4a8922",
+   "id": "213ba5b4-7893-4c11-8744-9653b913d998",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b6ff38-54f1-4e84-bec2-8fa5184d2b31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnch_data = pd.DataFrame([pd.read_json(p, typ=\"series\") for p in paths])"
+    "paths = Path(\"benchmark\").glob(\"*.json\")\n",
+    "bnch_data = pd.concat([pd.read_json(p, orient=\"records\") for p in paths])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adcaaefe-8067-4e58-aa31-6611a89d5816",
+   "id": "2ad61d6d-701e-44a8-8e4d-5f1944c6f50c",
    "metadata": {},
    "outputs": [],
    "source": [
