--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -118,7 +118,8 @@
    "source": [
     "import torch\n",
     "from datetime import datetime\n",
-    "from ArticleReader.LatexToSpeech import LatexParser, Chunker, Narrator\n",
+    "from ArticleReader.LatexToSpeech import LatexParser, Chunker\n",
+    "from ArticleReader.Narrator import Narrator\n",
     "import pandas as pd "
    ]
   },
