Benchmark: device and models are now variable
Narrator: models are now generic

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -120,7 +120,8 @@
     "from datetime import datetime\n",
     "from ArticleReader.LatexToSpeech import LatexParser, Chunker\n",
     "from ArticleReader.Narrator import Narrator\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import json"
    ]
   },
   {
@@ -255,13 +256,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fe64658-839c-4751-a404-ce5be1d69d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " model_name = \"tts-tacotron2-ljspeech\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
    "metadata": {},
    "outputs": [],
    "source": [
     "case = {\"device\": \"CPU\", \n",
-    "    \"tts_model\": \"tacotron\",\n",
-    "    \"vocoder_model\": \"hifigan\",\n",
+    "    \"tts_model\": \"tts-tacotron2-ljspeech\",\n",
+    "    \"vocoder_model\": \"tts-hifigan-ljspeech\",\n",
     "    \"batch_size\": 2, # (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200)\n",
     "    \"chunk_length\": 50 # (50 : 50 : 500)\n",
     "       }\n",
@@ -276,8 +287,9 @@
    "outputs": [],
    "source": [
     "experiment_run = bench.run_experiment(processed, case)\n",
-    "with open(\"benchmark/\" + experiment[0][\"experiment_id\"] + \".json\", \"w+\") as f:\n",
-    "    json.dump(experiment,f)\n"
+    "with open(\"benchmark/\" + experiment_run[0][\"experiment_id\"] + \".json\", \"w+\") as f:\n",
+    "    json.dump(experiment_run,f)\n",
+    "print('done')"
    ]
   },
   {
@@ -288,6 +300,16 @@
    "outputs": [],
    "source": [
     "experiment_run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d34e198-e202-43e9-ada3-6b1d24a02dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bench"
    ]
   },
   {
