move profiling from narrator to benchmark

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -256,16 +256,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe64658-839c-4751-a404-ce5be1d69d89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " model_name = \"tts-tacotron2-ljspeech\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
    "metadata": {},
    "outputs": [],
@@ -308,9 +298,7 @@
    "id": "5d34e198-e202-43e9-ada3-6b1d24a02dfa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bench"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -367,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(experiment[\"parameters\"][\"tts_model\"][\"memory_log\"][\"time\"][0])"
+    "type(experiment_run[\"parameters\"][\"tts_model\"][\"memory_log\"][\"time\"][0])"
    ]
   },
   {
