Add support to run a grid of experiments fix in summarize_profile added benchmark cases permutation func (not needed really)

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3817f393-5aa0-4395-b4d7-32aebfce613f",
    "metadata": {},
@@ -12,7 +13,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62c3735a-37f8-4aa4-8853-5fe628b0bb2f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:06:36.226952Z",
+     "iopub.status.busy": "2025-02-15T19:06:36.226479Z",
+     "iopub.status.idle": "2025-02-15T19:06:36.257203Z",
+     "shell.execute_reply": "2025-02-15T19:06:36.256373Z",
+     "shell.execute_reply.started": "2025-02-15T19:06:36.226925Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# make modules from py files auto-reload when changed\n",
@@ -21,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59da1763-4cc7-4175-afe8-2f648f90670b",
    "metadata": {},
@@ -84,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "78f997a8-4980-480a-892f-d0078db1a876",
    "metadata": {},
@@ -93,6 +104,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13692290-f4df-474f-b861-095623f1f808",
    "metadata": {},
@@ -113,7 +125,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:15.365582Z",
+     "iopub.status.busy": "2025-02-15T19:09:15.364608Z",
+     "iopub.status.idle": "2025-02-15T19:09:17.794421Z",
+     "shell.execute_reply": "2025-02-15T19:09:17.793443Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:15.365534Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -128,7 +148,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:17.796404Z",
+     "iopub.status.busy": "2025-02-15T19:09:17.795892Z",
+     "iopub.status.idle": "2025-02-15T19:09:18.630601Z",
+     "shell.execute_reply": "2025-02-15T19:09:18.629863Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:17.796374Z"
+    }
+   },
    "outputs": [],
    "source": [
     "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
@@ -147,7 +175,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:18.632071Z",
+     "iopub.status.busy": "2025-02-15T19:09:18.631411Z",
+     "iopub.status.idle": "2025-02-15T19:09:18.641107Z",
+     "shell.execute_reply": "2025-02-15T19:09:18.640509Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:18.632046Z"
+    }
+   },
    "outputs": [],
    "source": [
     "chunker = Chunker(max_len=200)\n",
@@ -159,6 +195,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "93ccbc4c-8a42-4485-9ef7-ab5cc6160108",
    "metadata": {},
@@ -195,6 +232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ff99115-2830-4215-9d5d-6df6331b8750",
    "metadata": {},
@@ -226,6 +264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "481240b2-9584-40b1-924e-9f4f7b0a665b",
    "metadata": {},
@@ -235,6 +274,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c0c3e27e-c5cf-46d1-8b52-01bf25369b2e",
    "metadata": {},
@@ -246,7 +286,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4c7a29d-fe62-4e6a-aa77-84b8ab5ad682",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:20.954231Z",
+     "iopub.status.busy": "2025-02-15T19:09:20.953565Z",
+     "iopub.status.idle": "2025-02-15T19:09:20.960541Z",
+     "shell.execute_reply": "2025-02-15T19:09:20.959874Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:20.954199Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from Benchmarking import Bench\n",
@@ -257,14 +305,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:21.525774Z",
+     "iopub.status.busy": "2025-02-15T19:09:21.524965Z",
+     "iopub.status.idle": "2025-02-15T19:09:21.537467Z",
+     "shell.execute_reply": "2025-02-15T19:09:21.536840Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:21.525739Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "case = {\"device\": \"CPU\", \n",
-    "    \"tts_model\": \"tts-tacotron2-ljspeech\",\n",
-    "    \"vocoder_model\": \"tts-hifigan-ljspeech\",\n",
-    "    \"batch_size\": 2, # (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200)\n",
-    "    \"chunk_length\": 50 # (50 : 50 : 500)\n",
+    "case = {\"chunk_length\": 50, # (50 : 50 : 500)\n",
+    "     \"batch_size\": 2, # (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200)        \n",
+    "     \"tts_model\": \"tts-tacotron2-ljspeech\",\n",
+    "     \"vocoder_model\": \"tts-hifigan-ljspeech\",\n",
+    "     \"device\": \"CPU\", \n",
     "       }\n",
     "case"
    ]
@@ -273,34 +329,149 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec7989f2-a161-4e7b-b9d0-c8bcdf796200",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:21.976540Z",
+     "iopub.status.busy": "2025-02-15T19:09:21.975704Z",
+     "iopub.status.idle": "2025-02-15T19:09:21.979437Z",
+     "shell.execute_reply": "2025-02-15T19:09:21.978750Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:21.976505Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "experiment_run = bench.run_experiment(processed, case)\n",
-    "with open(\"benchmark/\" + experiment_run[0][\"experiment_id\"] + \".json\", \"w+\") as f:\n",
-    "    json.dump(experiment_run,f)\n",
-    "print('done')"
+    "# experiment_run = bench.run_experiment(processed, case)\n",
+    "# with open(\"benchmark/\" + experiment_run[0][\"experiment_id\"] + \".json\", \"w+\") as f:\n",
+    "#     json.dump(experiment_run,f)\n",
+    "# print('done')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b610891-f075-4a78-a019-fd72f69aceaa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:22.440074Z",
+     "iopub.status.busy": "2025-02-15T19:09:22.439158Z",
+     "iopub.status.idle": "2025-02-15T19:09:23.032575Z",
+     "shell.execute_reply": "2025-02-15T19:09:23.031632Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:22.440034Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "experiment_run"
+    "#experiment_run"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b375b54c-7d99-4074-b928-a7df23a12240",
+   "metadata": {},
+   "source": [
+    "## Multiple experiments run "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d34e198-e202-43e9-ada3-6b1d24a02dfa",
-   "metadata": {},
+   "id": "9b776f65-e2b7-4101-b712-d6b2678a9ca3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:24.416113Z",
+     "iopub.status.busy": "2025-02-15T19:09:24.415610Z",
+     "iopub.status.idle": "2025-02-15T19:09:24.421840Z",
+     "shell.execute_reply": "2025-02-15T19:09:24.421248Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:24.416082Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "grid = {\"chunk_length\": range(50, 500, 50),\n",
+    "     \"batch_size\": (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200),\n",
+    "     \"tts_model\": [\"tts-tacotron2-ljspeech\", \"another\"],\n",
+    "     \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "     \"device\": [\"CPU\"], \n",
+    "       }\n",
+    "grid"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:26.022439Z",
+     "iopub.status.busy": "2025-02-15T19:09:26.021645Z",
+     "iopub.status.idle": "2025-02-15T19:09:26.027404Z",
+     "shell.execute_reply": "2025-02-15T19:09:26.026857Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:26.022403Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "smallgrid = {\"chunk_length\": [50,100],\n",
+    "     \"batch_size\": (1, 2),\n",
+    "     \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
+    "     \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "     \"device\": [\"CPU\"], \n",
+    "       }\n",
+    "smallgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0297de9-0ac2-498b-94b2-734f253d85de",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T19:09:27.285437Z",
+     "iopub.status.busy": "2025-02-15T19:09:27.284733Z",
+     "iopub.status.idle": "2025-02-15T19:09:34.175951Z",
+     "shell.execute_reply": "2025-02-15T19:09:34.175001Z",
+     "shell.execute_reply.started": "2025-02-15T19:09:27.285404Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bench.run_experiments(processed, smallgrid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc040943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "180c75ce-2872-4635-a8c1-2833cb8267b7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-15T17:16:32.931326Z",
+     "iopub.status.busy": "2025-02-15T17:16:32.930834Z",
+     "iopub.status.idle": "2025-02-15T17:16:32.946240Z",
+     "shell.execute_reply": "2025-02-15T17:16:32.945393Z",
+     "shell.execute_reply.started": "2025-02-15T17:16:32.931298Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cases = bench.permutations(grid)\n",
+    "\n",
+    "with open(\"cases.json\", 'w+') as f:\n",
+    "    json.dump(cases, f, indent=4)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec01b478-ce93-4a21-8eec-78f8ff764879",
    "metadata": {},
@@ -359,6 +530,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e57f9bd2-1e74-413a-bb8b-0f8acc67080f",
    "metadata": {},
@@ -416,6 +588,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bb961f1b-f728-4a4d-892d-febb6cf381c4",
    "metadata": {},
@@ -424,6 +597,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a77ea7d3-802a-4f1f-a61f-2d9a385ecbff",
    "metadata": {},
@@ -657,6 +831,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44d9e29d-342a-416e-963b-d20ef8983cfc",
    "metadata": {},
