Move Chunker to separate file

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -13,15 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62c3735a-37f8-4aa4-8853-5fe628b0bb2f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:06:36.226952Z",
-     "iopub.status.busy": "2025-02-15T19:06:36.226479Z",
-     "iopub.status.idle": "2025-02-15T19:06:36.257203Z",
-     "shell.execute_reply": "2025-02-15T19:06:36.256373Z",
-     "shell.execute_reply.started": "2025-02-15T19:06:36.226925Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# make modules from py files auto-reload when changed\n",
@@ -125,20 +117,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:15.365582Z",
-     "iopub.status.busy": "2025-02-15T19:09:15.364608Z",
-     "iopub.status.idle": "2025-02-15T19:09:17.794421Z",
-     "shell.execute_reply": "2025-02-15T19:09:17.793443Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:15.365534Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from datetime import datetime\n",
-    "from ArticleReader.LatexToSpeech import LatexParser, Chunker\n",
+    "from ArticleReader.Chunker import Chunker\n",
+    "from ArticleReader.LatexToSpeech import LatexParser\n",
     "from ArticleReader.Narrator import Narrator\n",
     "import pandas as pd \n",
     "import json"
@@ -148,15 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:17.796404Z",
-     "iopub.status.busy": "2025-02-15T19:09:17.795892Z",
-     "iopub.status.idle": "2025-02-15T19:09:18.630601Z",
-     "shell.execute_reply": "2025-02-15T19:09:18.629863Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:17.796374Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
@@ -175,15 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:18.632071Z",
-     "iopub.status.busy": "2025-02-15T19:09:18.631411Z",
-     "iopub.status.idle": "2025-02-15T19:09:18.641107Z",
-     "shell.execute_reply": "2025-02-15T19:09:18.640509Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:18.632046Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chunker = Chunker(max_len=200)\n",
@@ -286,15 +255,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4c7a29d-fe62-4e6a-aa77-84b8ab5ad682",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:20.954231Z",
-     "iopub.status.busy": "2025-02-15T19:09:20.953565Z",
-     "iopub.status.idle": "2025-02-15T19:09:20.960541Z",
-     "shell.execute_reply": "2025-02-15T19:09:20.959874Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:20.954199Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from Benchmarking import Bench\n",
@@ -305,15 +266,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:21.525774Z",
-     "iopub.status.busy": "2025-02-15T19:09:21.524965Z",
-     "iopub.status.idle": "2025-02-15T19:09:21.537467Z",
-     "shell.execute_reply": "2025-02-15T19:09:21.536840Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:21.525739Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "case = {\"chunk_length\": 50, # (50 : 50 : 500)\n",
@@ -329,15 +282,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec7989f2-a161-4e7b-b9d0-c8bcdf796200",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:21.976540Z",
-     "iopub.status.busy": "2025-02-15T19:09:21.975704Z",
-     "iopub.status.idle": "2025-02-15T19:09:21.979437Z",
-     "shell.execute_reply": "2025-02-15T19:09:21.978750Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:21.976505Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# experiment_run = bench.run_experiment(processed, case)\n",
@@ -350,15 +295,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b610891-f075-4a78-a019-fd72f69aceaa",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:22.440074Z",
-     "iopub.status.busy": "2025-02-15T19:09:22.439158Z",
-     "iopub.status.idle": "2025-02-15T19:09:23.032575Z",
-     "shell.execute_reply": "2025-02-15T19:09:23.031632Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:22.440034Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#experiment_run"
@@ -377,15 +314,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b776f65-e2b7-4101-b712-d6b2678a9ca3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:24.416113Z",
-     "iopub.status.busy": "2025-02-15T19:09:24.415610Z",
-     "iopub.status.idle": "2025-02-15T19:09:24.421840Z",
-     "shell.execute_reply": "2025-02-15T19:09:24.421248Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:24.416082Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grid = {\"chunk_length\": range(50, 500, 50),\n",
@@ -401,15 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:26.022439Z",
-     "iopub.status.busy": "2025-02-15T19:09:26.021645Z",
-     "iopub.status.idle": "2025-02-15T19:09:26.027404Z",
-     "shell.execute_reply": "2025-02-15T19:09:26.026857Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:26.022403Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "smallgrid = {\"chunk_length\": [50,100],\n",
@@ -425,15 +346,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c0297de9-0ac2-498b-94b2-734f253d85de",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T19:09:27.285437Z",
-     "iopub.status.busy": "2025-02-15T19:09:27.284733Z",
-     "iopub.status.idle": "2025-02-15T19:09:34.175951Z",
-     "shell.execute_reply": "2025-02-15T19:09:34.175001Z",
-     "shell.execute_reply.started": "2025-02-15T19:09:27.285404Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bench.run_experiments(processed, smallgrid)"
@@ -453,15 +366,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "180c75ce-2872-4635-a8c1-2833cb8267b7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-15T17:16:32.931326Z",
-     "iopub.status.busy": "2025-02-15T17:16:32.930834Z",
-     "iopub.status.idle": "2025-02-15T17:16:32.946240Z",
-     "shell.execute_reply": "2025-02-15T17:16:32.945393Z",
-     "shell.execute_reply.started": "2025-02-15T17:16:32.931298Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cases = bench.permutations(grid)\n",
